tests/negative/struct_array_return.ax
module struct_array_return;

struct Buffer {
    data: [4]u8;
}

fn bad() -> Buffer {
    return 0;
}

fn main() -> i32 {
    return 0;
}
